--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
-#Mon Aug 08 14:26:41 CST 2011
+#Thu Aug 11 11:11:03 CST 2011
 eclipse.preferences.version=1
+encoding//src/app1/forms.py=utf-8
 encoding//src/app1/models.py=utf-8
 encoding//src/app1/urls.py=utf-8
 encoding//src/app1/urlsauto.py=utf-8
