修改app.yaml，只有admin可以对article进行add/edit/del操作，以及对comment进行del操作

--- a/src/app.yaml
+++ b/src/app.yaml
@@ -38,6 +38,11 @@ handlers:
   static_dir: media
   secure: optional
 
+- url: /.*_.*/.*
+  script: common/appenginepatch/main.py
+  secure: optional
+  login: admin
+
 - url: /.*
   script: common/appenginepatch/main.py
   secure: optional
