--- a/src/cron.yaml
+++ b/src/cron.yaml
@@ -3,6 +3,14 @@ cron:
   url: /fetch
   schedule: every 1 minutes
 
+- description: Update Prospective Search Subscriptions
+  url: /subscribe_tags
+  schedule: every 10 minutes
+
+- description: Prospective Search on One Document
+  url: /match
+  schedule: every 1 minutes
+  
 - description: convert document to article
   url: /document_2_article
   schedule: every 1 minutes
